# gatt_server_client

./: .gitignore  README.md
client/: CMakeLists.txt  client.c
server/: CMakeLists.txt  main.c
server/ble/: ble.h
